--- a/html/forms.html
+++ b/html/forms.html
@@ -7,7 +7,16 @@
     <title>Document</title>
  </head>
   <body>
+    <nav>
+        <ul>
+          <li><a href="../bootstrap/home.html">home</a></li>
+          <li><a href="#">products</a></li>
+          <li><a href="../bootstrap/login.html">login</a></li>
+          <li><a href="../bootstrap/register.html">Register</a></li>
+        </ul>
+      </nav>
     <form>
+        <caption><b>Sample Test Form</b></caption> <br />
         <label>Username</label>
         <input type="text" /> <br />
         <label>Password</label>
