--- a/html/practice.html
+++ b/html/practice.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="../css/practice.css" rel="stylesheet" type="text/css">
     <style>
         table,th,td {
             border: 2px solid red; 
@@ -13,13 +14,21 @@
     </style>
   </head>
   <body>
+    <nav>
+        <ul>
+          <li><a href="../bootstrap/home.html">home</a></li>
+          <li><a href="#">products</a></li>
+          <li><a href="#">login</a></li>
+          <li><a href="#">Register</a></li>
+        </ul>
+      </nav>
     <a id="address1"></a>
-    <h1>h1 header</h1>
-    <h2>h2 header</h2>
-    <h3>h3 header</h3>
-    <h4>h4 header</h4>
-    <h5>h5 header</h5>
-    <h6>h6 header</h6>
+    <h1 id="header1">h1 header</h1>
+    <h2 id="header2">h2 header</h2>
+    <h3 id="header3">h3 header</h3>
+    <h4 id="header4">h4 header</h4>
+    <h5 id="header5">h5 header</h5>
+    <h6 id="header6">h6 header</h6>
     <article style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
     <p>
       <span style="font-size:24px; font-weight: bold;color: red;  ">Lorem Ipsum</span> is simply dummy text of the printing and typesetting industry.
@@ -185,7 +194,7 @@
         </table>
         <hr/>
         <!--Ordered List-->
-        <ol>
+        <ol id="firstol">
             <li>India</li>
             <li>Australia</li>
             <li>USA</li>
